style.css
:root {
    --header-g1: #333333;
    --header-g2: #111111;

    --htg-g1: #594545;
    --htg-g2: #815B5B;
    --htg-g3: #9E7676;
    --htg-highlight-color: #FFF8EA;
}

* {
    margin: 0;
    padding: 0;
}

img {
    object-fit: cover;
}

html::-webkit-scrollbar {
    display: none;
}

html {
    -ms-overflow-style: none;
    scrollbar-width: none; /* Firefox */
}

header {
    background: radial-gradient(var(--header-g1), var(--header-g2));
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 20px;
    padding-top: 20px;
}

header img {
    width: 80px;
    filter: brightness(0) saturate(100%) invert(100%);
    margin-right: 30px;
}

@font-face {
    font-family: Cocogoose;
    src: url("Cocogoose Pro Light-trial.ttf");
}

h1 {
    color: white;
    font-family: Cocogoose, sans-serif;
    font-size: 20px;
    font-weight: 600;
    letter-spacing: 3px;
}

h2 {
    padding: 30px 20px 20px;
    font-family: Cocogoose, sans-serif;
    font-weight: bolder;
    font-size: 40px;
    line-height: 25px;
    font-variant: small-caps;
    color: #594545;
}

h3 {
    padding: 30px 20px 20px;
    font-family: Cocogoose, sans-serif;
    font-size: 35px;
    font-variant: small-caps;
    line-height: 25px;
}

p {
    padding: 0 20px 20px;
    font-family: 'Montserrat', sans-serif;
    font-weight: bolder;
    font-size: 18px;
    line-height: 25px;
}


/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
  }
  
  /* Modal Content (image) */
  .modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
  }
  
  /* Caption of Modal Image */
  #caption {
    margin: auto;
    display: block;
    font-family: 'Roboto', sans-serif;
    font-weight: bolder;
    font-size: 30px;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
  }
  
  /* Add Animation */
  .modal-content, #caption {  
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
  }
  
  @-webkit-keyframes zoom {
    from {-webkit-transform:scale(0)} 
    to {-webkit-transform:scale(1)}
  }
  
  @keyframes zoom {
    from {transform:scale(0)} 
    to {transform:scale(1)}
  }
  
  /* The Close Button */
  .close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
  }
  
  .close:hover,
  .close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
  }
  
  /* 100% Image Width on Smaller Screens */
  @media only screen and (max-width: 700px){
    .modal-content {
      width: 100%;
    }
  }

[data-inviewport="fade-in"] {
    transition: 3s;
    opacity: 0;
}

[data-inviewport="fade-in"].is-inViewport {
    opacity: 1;
}

[data-inviewport="slide-from-left"] {
    transition: 1s;
    opacity: 0;
    transform: translateX(-100px);
}

[data-inviewport="slide-from-left"].is-inViewport {
    opacity: 1;
    transform: translateX(0);
}

[data-inviewport="slide-from-right"] {
    transition: 1s;
    opacity: 0;
    transform: translateX(100px);
}

[data-inviewport="slide-from-right"].is-inViewport {
    opacity: 1;
    transform: translateX(0);
}

#about-me {
    background: #FFF8EA;
    width: 100%;
    line-height: 0;
}

#about-me p {
    color: #815B5B;
}

#about-me br {
    margin-bottom: 20px;
}

#about-me img {
    width: 100%;
}

.vlayout:not(.justify-left) {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.vlayout .justify-left {
    display: flex;
    flex-direction: column;
    align-items: left;
}

.hlayout {
    display: flex;
    align-items: center;
    justify-content: center;
}

@keyframes background-pan {
    from {
        background-position: 0px 0px;
    }

    to {
        background-position: 0px 200vh;
    }
}

#help-the-gille {
    animation: background-pan 30s linear infinite;
    background: linear-gradient(
        to bottom,
        var(--htg-g2),
        var(--htg-g3) 50%,
        var(--htg-g2) 100%
    );
    background-size: 200%;
}

.showcase {
    width: 100%;
}

.presentation h3 {
    color: var(--htg-highlight-color);
}

.presentation p {
    color: #E0E0E0;
}

.presentation iframe {
    width: 100%;
    aspect-ratio: 16/9;
    border: 0;
}

.gallery {
    width: 100%;
    height: 90px;
    overflow-x: auto;
}

.gallery img {
    width: 160px;
    height: 90px;
    cursor: pointer;
    opacity: 0.7;
    transition: opacity 300ms, transform 300ms ease;
}

.gallery img:hover {
    opacity: 1;
    transform: scale(1.02, 1.02);
}

